From bc5041b (closure-adv):
==========================

In prisim/bispectrum_phase.py,

(*) In member function smooth_in_tbins() of class ClosurePhase, handle
the case when the specified LST bin size is smaller than the LST
resolution in the data, namely, do no binning and pass the existing
bin size, and other keys
(*) In member function subsample_differencing() of class ClosurePhase, 
handle the case when the specified LST bin size is smaller than the 
LST resolution in the data, namely, do no binning and pass the 
existing bin size, and other keys

From a3b9a25 (closure-adv):
==========================

In scripts/write_PRISim_bispectrum_phase_to_npz.py,

(*) Import prisim and set default path
(*) Correct the script description and default path of input YAML file

In prisim/examples/ioparms/model_bispectrum_phase_to_npz_parms.yaml,

(*) Update input parameters with updated defaults and updated
descriptions

From 47b70df (closure-adv):
==========================

In prisim/bispectrum_phase.py,

(*) Remove commented lines in function
incoherent_cross_power_spectrum_average()

From dd0d710 (closure-adv):
==========================

In prisim/bispectrum_phase.py,

(*) In function incoherent_cross_power_spectrum_average(), fix bug to
handle when diagweights in the input dictionaries could either be a
dictionary or a numpy array

From 73f7a47 (closure-adv):
==========================

In prisim/bispectrum_phase.py,

(*) In function incoherent_kbin_averaging(), add a progressbar

From f783389 (master):
=====================

In prisim/bispectrum_phase.py,

(*) In function incoherent_cross_power_spectrum_average(), fix bug in
estimating axes to average in case of subsample differences

From aadeca3 (noise):
====================

In prisim/bispectrum_phase.py,

(*) In member function subsample_differencing() of class ClosurePhase,
fix bug in creation of the outshape

From 8700a47 (noise):
====================
